--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -176,12 +176,12 @@ Stepping into the for-loop we realize that it is pretty similar to a Leave-One-O
 
 As described in [Cross-validation on PCA methods], one is now equipped with multiple approaches to recover the best amount of dimensions needed to represent data "accurately" of a data set. Intuitively, every method must have its different advantages and drawbacks.
 To get a better feeling on how the Cross-Validation methods behave in different circumstances, one can run a simulation study on a variety of synthesized data sets. This allows us to discover the limits of the different methods used and to conclude and recommend different Algorithms with respect to its underlying data. 
-By construction of our Algorithms, every single one of them besides the [Naïve Approach], the [Matrix completion method] is only applicable to Multivariate Gaussian distributed data. Therefore we restrict ourselves to this special distribution and create corresponding data in order to get meaningful and comparable results. All in all, $9$ different data sets were considered and the results of the five algorithms were compared. Furthermore, we only consider centered Gaussian Multivariate Random variables and create three base data sets, on which we infer three kinds of different noises. The first data set is a standard Multivariate Gaussian data set while the second and third base data sets will rely on a random and structured covariance matrix respectively. We denote our base data sets as $D^{i}_0, D^{i}_1$ and $D^{i}_2$ for $i \in \{1,\dots,3\}$, corresponding to each type of noise. It consists of data $\mathbf{X}=\{\mathbf{X}^1,\dots,\mathbf{X}^N\}$ and noise $\epsilon^{i}$. The amount of different parameters make it difficult to write get a single big picture of the problem, which is the reason we implemented a Shiny App that lets the reader tune the parameters as he pleases. We strongly recommend to check it out and test the limits of the implemented cross-validation methods. 
+By construction of our Algorithms, every single one of them besides the [Naïve Approach], the [Matrix completion method] is only applicable to Multivariate Gaussian distributed data. Therefore we restrict ourselves to this special distribution and create corresponding data in order to get meaningful and comparable results. All in all, $9$ different data sets were considered and the results of the five algorithms were compared. Furthermore, we only consider centered Gaussian Multivariate Random variables and create three base data sets, on which we infer three kinds of different noises. The first data set is a standard Multivariate Gaussian data set while the second and third base data sets will rely on a random and structured covariance matrix respectively. We denote our base data sets as $D^{i}_0, D^{i}_1$ and $D^{i}_2$ with $i \in \{1,\dots,3\}$, corresponding to each type of noise. It consists of data $\mathbf{X}=\{\mathbf{X}^1,\dots,\mathbf{X}^N\}$ and noise $\epsilon^{i}$. The amount of different parameters make it difficult to write get a single big picture of the problem, which is the reason we implemented a Shiny App that lets the reader tune the parameters as he pleases. We strongly recommend to check it out and test the limits of the implemented cross-validation methods.
 
 \[
-D^{i}_0 = X + \epsilon^{i}_p, \text{ where } X^j\sim\mathcal{N}(0, \mathbb{1}_{p\times p}), \forall j = 1,\dots,N\\
-D^{i}_1 = X + \epsilon^{i}_p, \text{ where } X^j\sim\mathcal{N}(0, \Sigma_1), \forall j = 1,\dots,N \text{ and } \Sigma_1=M\cdot M^{T}, (M_{ij})_{1\leq i,j\leq p} \stackrel{\text{iid}}{\sim} \mathcal{N}(0,1)\\
-D^{i}_2 = X + \epsilon^{i}_p, \text{ where } X^j\sim\mathcal{N}(0, \Sigma_2), \forall j = 1,\dots,n \text{ and } \Sigma_2=M\cdot M^{T}, (M_{ij})_{1\leq i,j\leq p}=\frac{(i-1)p+j}{p}
+D^{i}_0 = \mathbf{X} + \epsilon^{i}_p, \text{ where } \mathbf{X}^j \sim \mathcal{N}(0, I_{p\times p}), \forall j = 1,\dots,N\\
+D^{i}_1 = \mathbf{X} + \epsilon^{i}_p, \text{ where } \mathbf{X}^j \sim \mathcal{N}(0, \Sigma_1), \forall j = 1,\dots,N \text{ and } \Sigma_1=MM^{T}, (M_{ij})_{1\leq i,j\leq p} \stackrel{\text{iid}}{\sim} \mathcal{N}(0,1)\\
+D^{i}_2 = \mathbf{X} + \epsilon^{i}_p, \text{ where } \mathbf{X}^j \sim \mathcal{N}(0, \Sigma_2), \forall j = 1,\dots,n \text{ and } \Sigma_2=MM^{T}, (M_{ij})_{1\leq i,j\leq p}=\frac{(i-1)p+j}{p}
 \]
 
 For the covariance $\Sigma_2$ of $D^{i}_2$ we will get a structured matrix that will emphasize the meaningful position of the last variables. For clarity purposes, we will give an example for $p=3$:
@@ -201,12 +201,12 @@ M =
 \end{pmatrix}
 \]
 
-In order to have valid comparisons across all of our methods and validate their correctness, we fix the rank of $\mathbf{X}$ as follows. First, we realize that by the random construction of $\mathbf{X}$, we can assume that it has full rank $p$. Second, we truncate it to a specific rank $r$, which should be the recommended number of PCs of our Algorithms. Due to asymmetry of $\mathbf{X}$, we do so by performing a singular value decomposition of $\mathbf{X}$ with the built-in `svd()` function. We will set its $p-r$ smallest singular values to $0$; which enables us to control its rank. Please note that $D_2$ is already of rank $2$ before adding noise. Having adapted $\mathbf{X}$, we infer either uniform noise, differing noise or noise that will increase for each variable.
+In order to have valid comparisons across all of our methods and validate their correctness, we fix the rank of $\mathbf{X}$ as follows. First, we realize that by the random construction of $\mathbf{X}$, we can assume that it has full rank $p$. Second, we truncate it to a specific rank $r$, which should be the recommended number of PCs of our Algorithms. Due to asymmetry of $\mathbf{X}$, we do so by performing a singular value decomposition of $\mathbf{X}$ with the built-in `svd()` function. We will set its $p-r$ smallest singular values to $0$; which enables us to control its rank. Please note that $D_2$ is already of rank $2$ before adding noise. Having adapted $\mathbf{X}$, we infer either uniform noise, differing noise.
 
 \[
-\epsilon^{1}_p \stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma=0.02*Val_{SVD}^r \text{ where } Val_{SVD}^r \text{ is the r-th singular value of } \mathbf{X}\\
-\epsilon^{2}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma=0.001*Val_{SVD}^r \\
-\epsilon^{3}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0, U), U_{ii}\stackrel{\text{iid}}{\sim} \mathcal{U}([0,0.005*Val_{SVD}^r]) \text{ and } U_{ij}=0, \text{for } i\neq j \\
+\epsilon^{1}_p \stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2I_{p\times p}), \sigma=0.02\text{V}_{SVD}^r \text{ where } \text{V}_{SVD}^r \text{ is the r-th singular value of } \mathbf{X}\\
+\epsilon^{2}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2 I_{p\times p}), \sigma=0.001\text{V}_{SVD}^r \\
+\epsilon^{3}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0, U), U_{ii}\stackrel{\text{iid}}{\sim} \mathcal{U}([0,0.005\text{V}_{SVD}^r]) \text{ and } U_{ij}=0, \text{for } i\neq j \\
 \]
 
 We run our simulation with $n=100$ observations per data set and $p=8$ variables. We truncate our data set to rank $r=3$ and repeat our cross-validation $sim=5$ times on the seed $1312$. The methods using classical cross-validation will loop over $K=5$ folds. In order to take into consideration the magnitude of our data set, we chose to multiply the noise's variance by the $r-th$ singular value of $\mathbf{X}$.
